--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@
 /* scrooll-image */
 
 
-.scroller {
+/* .scroller {
   max-width: 600px;
 }
 
@@ -83,41 +83,20 @@
 
 /* general styles */
 
-:root {
-  --clr-neutral-100: hsl(0, 0%, 100%);
-  --clr-primary-100: hsl(205, 15%, 58%);
-  --clr-primary-400: hsl(215, 25%, 27%);
-  --clr-primary-800: hsl(217, 33%, 17%);
-  --clr-primary-900: hsl(218, 33%, 9%);
-}
-
-html {
-  color-scheme: dark;
-}
-
-body {
-  display: grid;
-  min-block-size: 100vh;
-  place-content: center;
-  font-family: system-ui;
-  font-size: 1.125rem;
-  background-color: var(--clr-primary-800);
-}
-
-.tag-list {
-  margin: 0;
-  padding-inline: 0;
-  list-style: none;
-}
-
-.tag-list li {
-  padding: 1rem;
-  background: var(--clr-primary-400);
-  border-radius: 0.5rem;
-  box-shadow: 0 0.5rem 1rem -0.25rem var(--clr-primary-900);
-}
 
 /* for testing purposed to ensure the animation lined up correctly */
 .test {
   background: red !important;
+}
+.content:hover p{
+  color: white;
+  transform: translateY(-4px);
+  transition: 0.5s;
+}
+.content:hover{
+  transition: 0.5s;
+
+}
+.input-icon input{
+  color: #1a5eff;
 }
